2008-01-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added categorized option help. Specify category using --help option.
	Also added the ability to search options in forward match.
	* src/HelpItem.{h, cc}
	* test/HelpItemTest.cc
	* src/HelpItemFactory.{h, cc}
	* src/TagContainer.{h, cc}
	* test/TagContainerTest.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/TaggedItem.{h, cc}
	* test/TaggedItemTest.cc
	* src/version_usage.cc
	* src/help_tags.h
	* src/usage_text.h

2008-01-04  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed segmentation fault when bad torrent metainfo is parsed.
	Added dynamic_cast properly to detect the misconfiguration of metainfo
	and then throw exception or skip it.
	* src/DefaultBtContext.{h, cc}
	* test/DefaultBtContextTest.cc
	* src/AnnounceList.cc
	* src/CompactPeerListProcessor.cc
	* src/message.h
	* src/DefaultBtAnnounce.{h, cc}
	* test/DefaultBtAnnounceTest.cc
	* src/BencodeVisitor.cc

2007-12-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing "B"(=Byte). So now the message looks like this:
	Your share ratio was 1.0, uploaded/downloaded=12MiB/12MiB	
	* src/message.h (MSG_SHARE_RATIO_REPORT)

2007-12-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Show the seed ratio after torrent downloads.
	For example, after torrent download completed and --seed-time and
	--seed-ratio conditions are fulfilled, following message is printed
	right after "Download complete: .....":
	Your share ratio was 1.0, uploaded/downloaded=12M/12M
	* src/RequestGroupMan.cc
	* src/RequestGroup.{h, cc}
	* src/message.h

2007-12-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Remove a defunct control file. A defunct control file means that while
	it exists, but the corresponding download file is missing.
	After its removal, a download restarts from the beginning.
	* src/RequestGroup.cc
	* src/message.h

2007-12-26  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
